[gd_scene load_steps=25 format=3 uid="uid://bp6lwki78jakn"]

[ext_resource type="Script" path="res://track_select.gd" id="1_t6gqo"]
[ext_resource type="LabelSettings" uid="uid://b7qt8cpyeutjv" path="res://build/windows/assets/themes/menu_title.tres" id="2_cv8su"]
[ext_resource type="PackedScene" uid="uid://cm3p2y64gjteu" path="res://time_tracker.tscn" id="2_lxdbp"]
[ext_resource type="Theme" uid="uid://buv88ph3qdiwe" path="res://build/windows/assets/themes/track_box.tres" id="3_rbmjg"]
[ext_resource type="Theme" uid="uid://b8c237wj3n2h6" path="res://build/windows/assets/themes/Track_button.tres" id="4_f51sk"]
[ext_resource type="FontFile" uid="uid://cnonj37wvdwwj" path="res://build/windows/assets/fonts/Kode_Mono/KodeMono-VariableFont_wght.ttf" id="5_s7f34"]
[ext_resource type="PackedScene" uid="uid://d0qtowtusfaqh" path="res://highlight.tscn" id="6_evtxh"]
[ext_resource type="PackedScene" uid="uid://ba3jqke53gums" path="res://tips_box.tscn" id="8_tatlk"]
[ext_resource type="Theme" uid="uid://cx8v3o7umtucr" path="res://build/windows/assets/themes/secondary_menu_buttons.tres" id="11_nt1yn"]
[ext_resource type="PackedScene" uid="uid://c5fwts0rfoyru" path="res://music_panel.tscn" id="13_h2b0m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sro46"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0

[sub_resource type="ImageTexture" id="ImageTexture_3oa5r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3jau3"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.4)
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_18xqb"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sl8l"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.75, 0.75, 0.75, 0.75)
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4v7rj"]
content_margin_left = 4.0
content_margin_top = 0.0
content_margin_right = 4.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dnyeg"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_rrxlp"]
ScrollContainer/styles/panel = SubResource("StyleBoxEmpty_sro46")
VScrollBar/icons/decrement = SubResource("ImageTexture_3oa5r")
VScrollBar/icons/decrement_highlight = SubResource("ImageTexture_3oa5r")
VScrollBar/icons/decrement_pressed = SubResource("ImageTexture_3oa5r")
VScrollBar/icons/increment = SubResource("ImageTexture_3oa5r")
VScrollBar/icons/increment_highlight = SubResource("ImageTexture_3oa5r")
VScrollBar/icons/increment_pressed = SubResource("ImageTexture_3oa5r")
VScrollBar/styles/grabber = SubResource("StyleBoxFlat_3jau3")
VScrollBar/styles/grabber_highlight = SubResource("StyleBoxFlat_18xqb")
VScrollBar/styles/grabber_pressed = SubResource("StyleBoxFlat_8sl8l")
VScrollBar/styles/scroll = SubResource("StyleBoxFlat_4v7rj")
VScrollBar/styles/scroll_focus = SubResource("StyleBoxFlat_dnyeg")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l1gnh"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
draw_center = false
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_vk82e"]
HBoxContainer/constants/separation = 4
PanelContainer/styles/panel = SubResource("StyleBoxFlat_l1gnh")

[sub_resource type="LabelSettings" id="LabelSettings_jcjgi"]
font = ExtResource("5_s7f34")
font_size = 47
font_color = Color(0.76662, 0.76662, 0.76662, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wbsx7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3eule"]
draw_center = false
border_width_bottom = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dck1x"]

[node name="TrackSelect" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t6gqo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HSeperator2" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "[ TRACKS ]"
label_settings = ExtResource("2_cv8su")
horizontal_alignment = 3
vertical_alignment = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
focus_next = NodePath("../../buttons/HBoxContainer/HBoxContainer/mainMenu")
mouse_filter = 0
theme = SubResource("Theme_rrxlp")
follow_focus = true
scroll_vertical_custom_step = 0.1
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
scroll_deadzone = 5

[node name="VBoxContainer7" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 0
theme_override_constants/separation = 25

[node name="track_1" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_1"]
layout_mode = 2
mouse_filter = 0
theme = SubResource("Theme_vk82e")

[node name="track_1_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_1/HBoxContainer" groups=["button", "track_button"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_f51sk")
text = "Tutorial_track_1"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_1/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_1" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_1/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="Highlight" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_1/HBoxContainer" instance=ExtResource("6_evtxh")]
layout_mode = 2
mouse_filter = 0

[node name="track_2" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_2"]
layout_mode = 2
mouse_filter = 0

[node name="track_2_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_2/HBoxContainer" groups=["button", "track_button"]]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_f51sk")
text = "Tutorial_track_2"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_2/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_2" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_2/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="track_3" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_3"]
layout_mode = 2
mouse_filter = 0

[node name="track_3_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_3/HBoxContainer" groups=["button", "track_button"]]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_f51sk")
text = "Race_track_1"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_3/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_3" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_3/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="track_4" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_4"]
layout_mode = 2
mouse_filter = 0

[node name="track_4_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_4/HBoxContainer" groups=["button", "track_button"]]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_f51sk")
text = "Tutorial_track_2"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_4/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_4" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_4/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="track_5" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_5"]
layout_mode = 2
mouse_filter = 0

[node name="track_5_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_5/HBoxContainer" groups=["button", "track_button"]]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_f51sk")
text = "Tutorial_track_3"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_5/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_5" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_5/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="track_6" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_6"]
layout_mode = 2
mouse_filter = 0

[node name="track_6_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_6/HBoxContainer" groups=["button", "track_button"]]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("4_f51sk")
text = "Tutorial_track_4"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_6/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_6" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_6/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="track_7" type="PanelContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7"]
layout_mode = 2
theme = ExtResource("3_rbmjg")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_7"]
layout_mode = 2
mouse_filter = 0

[node name="track_7_button" type="Button" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_7/HBoxContainer" groups=["button", "track_button"]]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
focus_neighbor_bottom = NodePath("../../../../../../buttons/HBoxContainer/HBoxContainer/mainMenu")
focus_next = NodePath("../../../../../../buttons/HBoxContainer/HBoxContainer/mainMenu")
theme = ExtResource("4_f51sk")
text = "Tutorial_track_4"
flat = true
alignment = 0

[node name="HSeperator" type="HSeparator" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_7/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="track_7" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer7/track_7/HBoxContainer" groups=["track_label"]]
layout_mode = 2
mouse_filter = 0
text = "00:00.00"
label_settings = SubResource("LabelSettings_jcjgi")

[node name="HSeperator" type="HSeparator" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeFiller" parent="." instance=ExtResource("2_lxdbp")]

[node name="tipsBox" parent="." instance=ExtResource("8_tatlk")]
layout_mode = 1
offset_left = 85.0
offset_top = 489.0
offset_right = 479.0
offset_bottom = 676.0

[node name="buttons" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(838, 0)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -419.0
offset_top = -152.0
offset_right = 419.0
offset_bottom = -103.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_wbsx7")

[node name="HBoxContainer" type="HBoxContainer" parent="buttons"]
layout_mode = 2
theme = ExtResource("3_rbmjg")
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="buttons/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="buttons/HBoxContainer"]
layout_mode = 2

[node name="mainMenu" type="Button" parent="buttons/HBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = ExtResource("11_nt1yn")
theme_override_styles/focus = SubResource("StyleBoxFlat_3eule")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dck1x")
text = "MAIN MENU"
flat = true

[node name="HSeparator" type="HSeparator" parent="buttons/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="buttons/HBoxContainer"]
layout_mode = 2

[node name="saveAndExit" type="Button" parent="buttons/HBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme = ExtResource("11_nt1yn")
theme_override_styles/focus = SubResource("StyleBoxFlat_3eule")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dck1x")
text = "SAVE AND EXIT"
flat = true

[node name="HSeparator2" type="HSeparator" parent="buttons/HBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true

[node name="MusicPanel" parent="." instance=ExtResource("13_h2b0m")]
layout_mode = 1
offset_left = 1431.0
offset_top = 369.0
offset_right = 1431.0
offset_bottom = 369.0

[node name="PanelContainer" parent="MusicPanel" index="0"]
offset_left = 10.0
offset_top = 39.0
offset_right = 418.0
offset_bottom = 372.0

[node name="title" parent="MusicPanel/PanelContainer/VBoxContainer" index="0"]
text = "Joshua mclean mountain TRIALS"

[connection signal="pressed" from="buttons/HBoxContainer/HBoxContainer/mainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="buttons/HBoxContainer/HBoxContainer2/saveAndExit" to="." method="_on_save_and_exit_pressed"]

[editable path="MusicPanel"]
